workspace = { members = ["wmlua-src"] }
[package]
name = "wmlua"
version = "0.1.0"
edition = "2021"
authors = ["tickbh <tickdream125@hotmail.com>"]
description = "wmlua"
repository = "https://github.com/tickbh/wmlua"
license = "Apache-2.0"
keywords = ["wmlua"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
