[package]
name = "wmlua"
version = "0.1.0"
edition = "2021"
authors = ["tickbh <tickdream125@hotmail.com>"]
description = "wmlua"
repository = "https://github.com/tickbh/wmlua"
license = "Apache-2.0"
keywords = ["wmlua"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.1"

[workspace]
members = ["wmlua-src"]

[features]
lua54=[]
lua53=[]
lua52=[]
lua51=[]