[package]
name = "wmlua"
version = "0.1.0"
edition = "2021"
authors = ["tickbh <tickdream125@hotmail.com>"]
description = "wmlua"
repository = "https://github.com/tickbh/wmlua"
license = "Apache-2.0"
keywords = ["wmlua"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
libc = "0.2.1"

ffi = { package = "wmlua-src", version = "0.1.0", path = "wmlua-src" }

[workspace]
members = ["wmlua-src"]

[features]
lua54=["ffi/lua54"]
lua53=["ffi/lua53"]
lua52=["ffi/lua52"]
lua51=["ffi/lua51"]
luajit=["ffi/luajit"]
luajit52=["luajit", "ffi/luajit52"]