[package]
name = "wmlua-src"
version = "0.1.0"
edition = "2021"
authors = ["tickbh <tickdream125@hotmail.com>"]
description = "wmlua"
repository = "https://github.com/tickbh/wmlua"
license = "Apache-2.0"
build = "build.rs"
keywords = ["wmlua"]
categories = ["external-ffi-bindings"]
links = "lua"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["staticlib"]

[build-dependencies]
cc = "1.0.54"
which = "6.0"

[features]
lua54=[]
lua53=[]
lua52=[]
lua51=[]
luajit=[]
luajit52=[]